--- a/index.html
+++ b/index.html
@@ -45,15 +45,17 @@
                             </button>
                         </li>
                         <li class="navbar-brand">
-                            <img src="assets/images/logo/adada.png" alt="Logo" width="80">
+                            <a href="/">
+                                <img src="assets/images/logo/adada.png" alt="Logo" width="80">
+                            </a>
                         </li>
                         <li class="menu-items-container d-none d-md-none d-lg-block">
                             <ul class="d-flex menu-items">
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link active">Home</a>
+                                    <a href="/" class="nav-link active">Home</a>
                                 </li>
                                 <li class="nav-item">
-                                    <a href="#" class="nav-link">Shop</a>
+                                    <a href="shop.html" class="nav-link">Shop</a>
                                 </li>
                                 <li class="nav-item">
                                     <a href="#" class="nav-link">Flash Sell</a>
@@ -2644,7 +2646,7 @@
                         <p class="text-sm pt-2">
                             +8801 403 111 999
                         </p>
-                        <div class="quantity-buy">
+                        <div class="quantity-buy d-flex">
                             <div class="quantity">
                                 <button class="cart-qty-minus" id="dec" type="button" value="-">-</button>
                                 <input type="text" name="qty" id="qty" class="qty" maxlength="12" value="0" class="input-text qty" />
