--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                             <ul class="topbar-right me-1 mb-0">
                                 <li><a href="#" class="top-r-link"><i class="fas fa-random"></i><span class="badge badge-pill">1</span> <span class="compare">Compare</span></a></li>
                                 <li><a href="#" class="top-r-link"><i class="far fa-heart"></i><span class="badge badge-pill">1</span> <span class="compare">Wishlist</span></a></li>
-                                <li><a href="#" class="top-r-link">Login/Register</a></li>
+                                <li><a href="login.html" class="top-r-link">Login/Register</a></li>
                             </ul>
                         </div>
                      </div>
