--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
                         </ul>
                         <div class="topbar-right">
                             <ul class="topbar-right me-1 mb-0">
-                                <li><a href="#" class="top-r-link"><i class="fas fa-random"></i><span class="badge badge-pill">1</span> <span class="compare">Compare</span></a></li>
-                                <li><a href="#" class="top-r-link"><i class="far fa-heart"></i><span class="badge badge-pill">1</span> <span class="compare">Wishlist</span></a></li>
+                                <li><a href="compare.html" class="top-r-link"><i class="fas fa-random"></i><span class="badge badge-pill">1</span> <span class="compare">Compare</span></a></li>
+                                <li><a href="wishlist.html" class="top-r-link"><i class="far fa-heart"></i><span class="badge badge-pill">1</span> <span class="compare">Wishlist</span></a></li>
                                 <li><a href="login.html" class="top-r-link">Login/Register</a></li>
                             </ul>
                         </div>
@@ -2834,11 +2834,11 @@
                                 <li>
                                     <a href="#"><b>Information</b></a>
                                 </li>
-                                <li><a href="#">About Live Shopping</a></li>
-                                <li><a href="#">Privacy Policy</a></li>
-                                <li><a href="#">Terms & Conditions</a></li>
-                                <li><a href="#">Return Refunds</a></li>
-                                <li><a href="#">FAQ</a></li>
+                                <li><a href="about.html">About Live Shopping</a></li>
+                                <li><a href="privacy-policy.html">Privacy Policy</a></li>
+                                <li><a href="terms.html">Terms & Conditions</a></li>
+                                <li><a href="return.html">Return Refunds</a></li>
+                                <li><a href="faq.html">FAQ</a></li>
                             </ul>
                         </div>
                         <div class="col-4 footer-menu-col">
@@ -2846,7 +2846,7 @@
                                 <li>
                                     <a href="#"><b>MY ACCOUNT</b></a>
                                 </li>
-                                <li><a href="#">Dashboard</a></li>
+                                <li><a href="dashboard.html">Dashboard</a></li>
                                 <li><a href="#">Wishlist</a></li>
                                 <li><a href="#">Special Products</a></li>
                                 <li><a href="#">Gift Voucher</a></li>
@@ -2858,7 +2858,7 @@
                                 <li>
                                     <a href="#"><b>SERVICES</b></a>
                                 </li>
-                                <li><a href="#">Contact us</a></li>
+                                <li><a href="contact.html">Contact us</a></li>
                                 <li><a href="#">Sitemap</a></li>
                                 <li><a href="#">Support</a></li>
                                 <li><a href="#">Help</a></li>
